objects/MDPERSONATOR__MD_propertyResponse2__c.object
<CustomObject>
    <description>An object that stores the XML Response from the Property Web Service.</description>
    <fields>
        <fullName>MDPERSONATOR__BuildingAirConditioningCode__c</fullName>
        <label>BuildingAirConditioningCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingBasementCode__c</fullName>
        <label>BuildingBasementCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingBathFixtures__c</fullName>
        <label>BuildingBathFixtures</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingBedRooms__c</fullName>
        <label>BuildingBedRooms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingBuildingCode__c</fullName>
        <label>BuildingBuildingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingBuildingStyleCode__c</fullName>
        <label>BuildingBuildingStyleCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingConditionCode__c</fullName>
        <label>BuildingConditionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingConstructionCode__c</fullName>
        <label>BuildingConstructionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingEffectiveYearBuilt__c</fullName>
        <label>BuildingEffectiveYearBuilt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingElectricityCode__c</fullName>
        <label>BuildingElectricityCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingExteriorWallCode__c</fullName>
        <label>BuildingExteriorWallCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFireplaceCode__c</fullName>
        <label>BuildingFireplaceCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFireplace__c</fullName>
        <label>BuildingFireplace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFireplaces__c</fullName>
        <label>BuildingFireplaces</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFlooringCode__c</fullName>
        <label>BuildingFlooringCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFoundationCode__c</fullName>
        <label>BuildingFoundationCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFuelCode__c</fullName>
        <label>BuildingFuelCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingFullBaths__c</fullName>
        <label>BuildingFullBaths</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingGarageCode__c</fullName>
        <label>BuildingGarageCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingHalfBaths__c</fullName>
        <label>BuildingHalfBaths</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingHeatingCode__c</fullName>
        <label>BuildingHeatingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingImprovementCode__c</fullName>
        <label>BuildingImprovementCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingMobileHome__c</fullName>
        <label>BuildingMobileHome</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingOneQuarterBaths__c</fullName>
        <label>BuildingOneQuarterBaths</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingParkingCode__c</fullName>
        <label>BuildingParkingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingParkingSpaces__c</fullName>
        <label>BuildingParkingSpaces</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingPoolCode__c</fullName>
        <label>BuildingPoolCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingPool__c</fullName>
        <label>BuildingPool</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingQualityCode__c</fullName>
        <label>BuildingQualityCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingRoofCoverCode__c</fullName>
        <label>BuildingRoofCoverCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingRoofFramingCode__c</fullName>
        <label>BuildingRoofFramingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingRoofTypeCode__c</fullName>
        <label>BuildingRoofTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingSewerCode__c</fullName>
        <label>BuildingSewerCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingStoriesCode__c</fullName>
        <label>BuildingStoriesCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingStories__c</fullName>
        <label>BuildingStories</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingThreeQuarterBaths__c</fullName>
        <label>BuildingThreeQuarterBaths</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingTotalBathsCalculated__c</fullName>
        <label>BuildingTotalBathsCalculated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingTotalBaths__c</fullName>
        <label>BuildingTotalBaths</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingTotalRooms__c</fullName>
        <label>BuildingTotalRooms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingUnits__c</fullName>
        <label>BuildingUnits</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingWaterCode__c</fullName>
        <label>BuildingWaterCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingYearBuilt__c</fullName>
        <label>BuildingYearBuilt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotAcreage__c</fullName>
        <label>LotAcreage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotDepthFootage__c</fullName>
        <label>LotDepthFootage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotFrontFootage__c</fullName>
        <label>LotFrontFootage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotSquareFootage__c</fullName>
        <label>LotSquareFootage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelAPNSequenceNo__c</fullName>
        <label>ParcelAPNSequenceNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelAbsenteeOwnerCode__c</fullName>
        <label>ParcelAbsenteeOwnerCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelCensusTract__c</fullName>
        <label>ParcelCensusTract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelCountyLandUse1__c</fullName>
        <label>ParcelCountyLandUse1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelCountyLandUse2__c</fullName>
        <label>ParcelCountyLandUse2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelFIPSCode__c</fullName>
        <label>ParcelFIPSCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelFIPSSubCode__c</fullName>
        <label>ParcelFIPSSubCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelFormattedAPN__c</fullName>
        <label>ParcelFormattedAPN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelHomesteadExempt__c</fullName>
        <label>ParcelHomesteadExempt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelLandUseCode__c</fullName>
        <label>ParcelLandUseCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelLocationInfluenceCode__c</fullName>
        <label>ParcelLocationInfluenceCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelMunicipalityName__c</fullName>
        <label>ParcelMunicipalityName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelNumberOfBuildings__c</fullName>
        <label>ParcelNumberOfBuildings</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelOriginalAPN__c</fullName>
        <label>ParcelOriginalAPN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelPropertyIndicatorCode__c</fullName>
        <label>ParcelPropertyIndicatorCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelQuarterSection__c</fullName>
        <label>ParcelQuarterSection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelRange__c</fullName>
        <label>ParcelRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelSection__c</fullName>
        <label>ParcelSection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelTownship__c</fullName>
        <label>ParcelTownship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelUnformattedAPN__c</fullName>
        <label>ParcelUnformattedAPN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelViewCode__c</fullName>
        <label>ParcelViewCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParcelZoning__c</fullName>
        <label>ParcelZoning</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageAdjustedGross__c</fullName>
        <label>SquareFootageAdjustedGross</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageBasement__c</fullName>
        <label>SquareFootageBasement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageBuildingAreaCode__c</fullName>
        <label>SquareFootageBuildingAreaCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageBuildingArea__c</fullName>
        <label>SquareFootageBuildingArea</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageGarageOrParking__c</fullName>
        <label>SquareFootageGarageOrParking</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageGross__c</fullName>
        <label>SquareFootageGross</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageGroundFloor__c</fullName>
        <label>SquareFootageGroundFloor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageLivingSpace__c</fullName>
        <label>SquareFootageLivingSpace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SquareFootageUniversalBuilding__c</fullName>
        <label>SquareFootageUniversalBuilding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__contactIdExtID__c</fullName>
        <externalId>true</externalId>
        <label>contactIdExtID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MD_propertyResponse2</label>
    <nameField>
        <label>MD_propertyResponse2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_propertyResponses2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>